--- a/SmallestDivisor/SmallestDivisor.vcxproj
+++ b/SmallestDivisor/SmallestDivisor.vcxproj
@@ -127,8 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Divisor.cpp" />
     <ClCompile Include="SmallestDivisor.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Divisor.h" />
