Project file changes

--- a/SmallestDivisor/SmallestDivisor.vcxproj.filters
+++ b/SmallestDivisor/SmallestDivisor.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="SmallestDivisor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SmallestDivisorNoSqrt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyMath.h">
