--- a/SmallestDivisor/SmallestDivisor.vcxproj
+++ b/SmallestDivisor/SmallestDivisor.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="SmallestDivisor.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SmallestDivisorNoSqrt.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Divisor.h" />
