AllDivisors.cpp included for compiling

--- a/SmallestDivisor/SmallestDivisor.vcxproj
+++ b/SmallestDivisor/SmallestDivisor.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AllDivisors.cpp" />
     <ClCompile Include="SmallestDivisor.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SmallestDivisorNoSqrt.cpp" />
